[package]
name = "stopwatch"
version = "0.1.0"
authors = ["Shu Yamani <mail@shuymn.me>"]
edition = "2018"
publish = false

[dependencies]
futures = "0.3.13"
iced = { version = "0.2.0", features = ["tokio"] }
iced_futures = "0.2.0"
iced_native = "0.3.0"
tokio = { version = "1.4.0", features = ["full"] }
